--- a/index.html
+++ b/index.html
@@ -420,24 +420,21 @@ body {
         <div class="card-subtitle">TENTANG KU</div>
         <div class="card-timeline">
           <div class="card-item" data-year="2020">
-            <div class="card-item-title"> Menemukan Hoby Baru</span></div>
+            <div class="card-item-title">Menemukan Hoby Baru</span></div>
             <div class="card-item-desc">pertama kali mengetahui dunia programing</div>
           </div>
           <div class="card-item" data-year="2021">
             <div class="card-item-title">Mulai membuat bot whatsapp</span></div>
-            <div class="card-item-desc">dengan skill yg di pelajari lewat youTube</div>
+            <div class="card-item-desc">belajar secara otodidak melalui youtube</div>
           </div>
           <div class="card-item" data-year="2022">
             <div class="card-item-title">Mulai menyewakan bot whatsapp</div>
-            <div class="card-item-desc">dan berhasil mendapatkan total 12k user</div>
+            <div class="card-item-desc">berhasil mendapatkan total 12k user</div>
           </div>
+
           <div class="card-item" data-year="2022">
-            <div class="card-item-title">Mulai membuat fitur dengan skill seadanya</span></div>
-            <div class="card-item-desc">total masih ada 3 fitur yg berhasil</div>
-          </div>
-          <div class="card-item" data-year="2022">
-            <div class="card-item-title">Lebih Serius Dengan Dunia Pemrograman</span></div>
-            <div class="card-item-desc">Belajar html, css, python dan javascript</div>
+            <div class="card-item-title">Mulai mendalami dunia pemrograman</span></div>
+            <div class="card-item-desc">belajar html, css, python dan javascript</div>
           </div>
         </div>
       </div>
