--- a/index.html
+++ b/index.html
@@ -406,12 +406,12 @@ body {
   <div class="card-main">
     <div class="card-section is-active" id="about">
       <div class="card-content">
-        <div class="card-subtitle">@xinzuo bot</div>
-        <p class="card-desc">"Kami ada untuk membantu, bukan menggantikan." 
+        <div class="card-subtitle">@xdnz.id</div>
+        <p class="card-desc">"Cuma minta follow ig ku, selebihnya donate." 
         </p>
       </div>
       <div class="card-social">
-        <a href="https://wa.me/6281391337455"><img src="https://telegra.ph/file/bb1c33057ee1c8673fae7.png" height="30" width="30"/></a>
+        <a href="https://api.qris.xyz"><img src="https://telegra.ph/file/353888edef7588226b44c.jpg" height="30" width="30"/></a>
         <a href="https://www.instagram.com/xdnz.id"><img src="https://telegra.ph/file/fb3942013de3a9aa1bfc3.png" height="30" width="30"/></a>
         </div>
     </div>
